<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deos_algorithms</name>
  <version>0.1.0</version>
  <description>Robotaksi pure-Python algorithm library for DEOS autonomous vehicle stack</description>
  <maintainer email="aaltindas.work@gmail.com">aaltindas</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

